# ACI

./: .dockerignore  .gitignore  ACI_BESCHREIBUNG.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  PROMPTS.MD  Prompt_IR-Schicht_ACI-2.3.0.md  README.md  REVIEW_FIXES_2.22.1.md  SQLI-Analyse-26ai.md  aci.ini  aci.py  pyproject.toml  sqli_taint_prototype.py
.github/workflows/: ci.yml  release.yml
ACI_WEB/: index.html
Logo/aci_favicon_bundle/: site.webmanifest
aci/: __init__.py  __main__.py  _io.py  _version.py  baseline.py  cli.py  config.py  errors.py  finding.py  integrity.py  ir.py  lexer.py  parser.py  rules.py  scanner.py  source.py  suppressions.py  waivers.py
aci/checks/: __init__.py  base.py  ddl.py  detectors.py  guidelines.py  lexical.py  psql_meta.py  sqli.py
aci/reporting/: __init__.py  _common.py  codeclimate.py  console.py  html.py  json_report.py  report.py  sarif.py
aci/rules/: oracle.json  postgresql.json
aci/rules/guidelines/: README.txt
aci/rules/guidelines/oracle/: g1_general.json  g2_variables_and_types.json  g3_dml_and_sql.json  g4_control_structures.json  g5_exception_handling.json  g6_dynamic_sql.json  g7_stored_objects.json  g8_patterns.json  g9_function_usage.json  (+1 more)
docs/: ACI_Dokumentation.html  ACI_Enterprise_Roadmap.html  ACI_Presentation.pptx  ACI_Regel_Abnahme.xlsx  MANUAL.md  generate_rule_docs.py  rule_examples.json
docs/rules/: index.html  oracle-guidelines.html  oracle-mitre.html  oracle-security.html  postgresql-guidelines.html  postgresql-mitre.html  postgresql-security.html
samples/: clean_oracle.sql  guidelines_oracle.sql  mitre_oracle.sql  vulnerable_oracle.sql  vulnerable_postgres.sql
tests/: conftest.py  test_baseline_atomic_write.py  test_baseline_multiset.py  test_baseline_validation.py  test_cli.py  test_config.py  test_config_cli.py  test_corpus.py  test_ddl_detection.py  test_doc_cli_consistency.py  test_encoding_and_toctou.py  test_end_to_end.py  test_epas_audit_tampering.py  test_explicit_file_limits.py  test_fingerprint_routine.py  test_integrity.py  test_internal_errors.py  test_interprocedural_named_arguments.py  test_interprocedural_taint.py  test_ir_parser.py  test_lexer.py  test_naming.py  test_new_security_rules.py  test_obfuscation.py  test_packages.py  test_packaging_metadata.py  test_postgres_coverage.py  test_postgres_statement_boundary.py  test_postgresql_mitre_rule_harness.py  test_postgresql_policy_251.py  test_psql_meta.py  test_report_atomic_write.py  test_report_audit.py  test_report_leakage.py  test_report_metrics.py  test_reporting_codeclimate.py  test_reporting_html.py  test_reporting_json.py  test_reporting_sarif.py  test_reproducible_and_dialect.py  (+21 more)
tests/corpus/flyway/: V1__init.expected.json  V1__init.sql
tests/corpus/liquibase/: changelog.expected.json  changelog.sql
tests/corpus/misc/: broken.expected.json  broken.sql  clean_comments.expected.json  clean_comments.sql
tests/samples/: invalid_rule_duplicate_id.json  invalid_rule_regex.json  oracle_safe.sql  oracle_vulnerable.sql  postgres_dollar_quote_safe.sql  postgres_dollar_quote_vulnerable.sql  postgres_safe.sql  postgres_vulnerable.sql
(+30 files in other folders)
