[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aci"
dynamic = ["version"]
description = "Automated Code Inspection - heuristischer Sicherheits- und Coding-Guidelines-Scanner fuer Oracle- und PostgreSQL-Code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT AND Apache-2.0" }
authors = [{ name = "Alexander Kornbrust" }]
keywords = [
    "oracle", "plsql", "postgresql", "security", "static-analysis",
    "sql-injection", "code-review", "mitre-attack", "trivadis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
    # Reproduzierbare Toolchain: gepinnt auf Bereiche, die mit ACI
    # nachweislich laufen (obere Schranken oberhalb der validierten
    # Versionen pytest 9.x / ruff 0.15.x / mypy 2.1.x, mit etwas Spielraum).
    "pytest>=7,<10",
    "pytest-cov",
    "ruff>=0.8,<0.16",
    "mypy>=1.10,<2.2",
]

[project.scripts]
aci = "aci.cli:main"

[tool.setuptools]
packages = ["aci", "aci.checks", "aci.reporting"]
# ACI ist gemischt lizenziert: eigener Code MIT, die aus den Trivadis
# Coding Guidelines abgeleiteten Oracle-Guideline-Regeln Apache-2.0.
license-files = ["LICENSE", "NOTICE", "licenses/Apache-2.0.txt"]

[tool.setuptools.dynamic]
version = { attr = "aci._version.__version__" }

[tool.setuptools.package-data]
aci = [
    "rules/*.json",
    "rules/guidelines/README.txt",
    "rules/guidelines/oracle/*.json",
    "rules/guidelines/postgresql/*.json",
    "rules/mitre/oracle/*.json",
    "rules/mitre/postgresql/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"
# Veraltete Build-Artefakte / Leftover sowie das einmalige Analyse-Skript
# (kein Paketbestandteil) nicht mitpruefen.
extend-exclude = ["aci-2.0.0", "aci.egg-info", "sqli_taint_prototype.py"]

[tool.mypy]
# Laufzeit-Mindestversion bleibt Python 3.9 (siehe requires-python). Der
# mypy-Pruef-Target ist jedoch auf 3.10 gesetzt, weil aktuelle mypy-Versionen
# (>= 1.18) ``python_version = "3.9"`` nicht mehr unterstuetzen. Der Code
# selbst bleibt 3.9-kompatibel (alle PEP-604-Unions stehen nur in Annotations
# unter ``from __future__ import annotations``).
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
